[package]
name = "kerf"
version = "0.1.0"
authors = ["mkulke <mkulke@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "=0.1.0-alpha.4"
bytes = "0.4"
prost = "0.5"
tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc", "async-await"]}
futures-util-preview = { version = "=0.3.0-alpha.19" }
async-stream = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
tonic-build = "=0.1.0-alpha.4"
