[package]
name = "kerf"
version = "0.1.0"
authors = ["mkulke <mkulke@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "=0.1.0-beta.1"
bytes = "0.4"
prost = "0.5"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
enum_extract = "0.1"

[build-dependencies]
tonic-build = "=0.1.0-beta.1"
